<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorMainBackground"
    tools:context="com.example.android.musical.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/playlist_text"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:layout_height="wrap_content"
            android:padding="16dp"
            android:textAllCaps="true"
            android:background="@color/colorMenuActive"
            android:textColor="@color/colorMenuTextActive"
            android:text="@string/menu_playlist"/>

        <TextView
            android:id="@+id/artists_text"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:layout_height="wrap_content"
            android:padding="16dp"
            android:textAllCaps="true"
            android:background="@color/colorMenu"
            android:text="@string/menu_artists"/>

        <TextView
            android:id="@+id/about_text"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:layout_height="wrap_content"
            android:padding="16dp"
            android:textAllCaps="true"
            android:background="@color/colorMenu"
            android:text="@string/menu_about"/>
    </LinearLayout>

    <ListView
        android:id="@+id/list"
        android:orientation="vertical"
        android:layout_marginTop="4dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

</LinearLayout>
